fix: some layout issues were causing the header to look weird on some devices

--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  position: fixed;
+  justify-content: space-around;
+  position: absolute;
   top: 0;
   width: 100%;
   font-size: calc(10px + 2vmin);
@@ -13,32 +13,39 @@
   margin: 0;
   height: 114px;
 }
-.App-header img {
-  position: fixed;
-  top: 14px;
-}
 
-.App-header input {
-  width: calc(100vw - 32px);
-  background-color: white;
-  height: 50px;
+.App-header form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   border: 2px solid #e0e0e0;
   box-sizing: border-box;
   border-radius: 8px;
-  position: fixed;
-  top: 51px;
-  left: 16px;
-  right: 16px;
+  padding: 2px;
+  background-color: white;
+  width: 90vw;
+}
 
+.App-header input {
+  background-color: white;
+  height: 50px;
+  border: none;
+  width: 66%;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
 }
+
+.App-header input:focus {
+  outline: none;
+}
+
 .App-header input::placeholder {
   color: #e0e0e0;
 }
+
 .App-header button {
   display: flex;
   flex-direction: row;
@@ -48,6 +55,7 @@
 
   width: fit-content;
   height: 30px;
+  margin-right: 5px;
 
   background: #27ae60;
   color: white;
@@ -60,51 +68,27 @@
   font-size: 14px;
   line-height: 17px;
   cursor: pointer;
-  position: fixed;
-  top: 59px;
-  right: 25px;
 }
 
 .searchContainer {
   background-color: #f5f5f5;
-  overflow: hidden;
 }
 
 @media screen and (min-width: 1024px) {
   .App-header {
     height: 80px;
+    flex-direction: row;
   }
-  .App-header img {
-    position: fixed;
-    left: 60px;
-    top: 28px;
+  .App-header form {
+    width: 400px;
   }
   .App-header input {
-    width: 365px;
-    left: 583px;
-    top: 10px;
-  }
-  .App-header button {
-    top: 18px;
-    right: 84px;
+    width: 90%;
   }
 }
+
 @media screen and (min-width: 1440px) {
   .App-header {
     height: 80px;
-  }
-  .App-header img {
-    position: fixed;
-    left: 293px;
-    top: 28px;
-  }
-  .App-header input {
-    width: 365px;
-    left: 830px;
-    top: 10px;
-  }
-  .App-header button {
-    top: 18px;
-    right: 307px;
   }
 }
